# FiscalConsultas

./: .checkov.yml  .coverage  .dockerignore  .env.example  .gitignore  .gitleaks.toml  .gitleaksignore  .grype.yaml  .mega-linter.yml  .prettierignore  .trivyignore  2ms-git-report.json  AGENTS.md  Dockerfile  Nesh.py  README.md  RENDER_PRODUCTION_CHECKLIST.md  apply_rls.py  benchmark_results.txt  benchmark_stemmer.py  check_health.py  check_strict.py  check_strict2.py  check_tables.py  consolidated_code.txt  coverage.xml  debug_middleware.py  debug_redis.py  debug_routes.py  debug_settings_and_db.py  diff.txt  docker-compose.yml  fix_backend.patch  fix_sonar.py  fix_system.py  fix_test.py  get_sonar_issues.py  git_status_output.txt  inspect_databases.py  main.py  (+22 more)
.agent/rules/: snyk_rules.md
.github/workflows/: deploy-pages.yml  megalinter.yml  tests.yml
.jules/: bolt.md
.pytest-temp/database-download-860c785e631740089f98de36f76835e8/: fiscal_offline.enc
Scripts results/: ncm_loading_flow.txt
Scripts results/Windows-CPython-3.13-64bit/: 0001_initial_run.json  0002_visible_run.json
backend/: __init__.py
backend/config/: __init__.py  constants.py  db_schema.py  exceptions.py  loader.py  logging_config.py  services_db_schema.py  settings.json  settings.py
backend/data/: __init__.py  glossary_manager.py
backend/domain/: __init__.py  comment_models.py  models.py  sqlmodels.py
backend/infrastructure/: __init__.py  database.py  database_search.py  db_engine.py  redis_client.py  schema_cache.py
backend/presentation/: __init__.py  (+5 more)
client/: .env.example  FRONTEND_GUIDE.md  eslint.config.js  frontend_test_analysis.txt  frontend_test_final.txt  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.js
data/: nbs.csv
database/: nesh.db  nesh.db-shm  nesh.db-wal  tipi.db
docs/: AI_CONTEXT.md  ROADMAP.md  TESTING.md
migrations/: env.py
scripts/: CodeExtractor.py  analyze_tipi_xlsx.py  build_offline_db.py  build_r2_fiscal_bundles.py  consolidate_files.py  consolidate_ncm_focus.py  debug_search.py  export_nbs_chapter_notes.py  generate_snapshot.py  generate_snapshot_baseline.py  god_module_guardrail.py  ingest_markdown.py  inspect_nesh.py  migrate_postgres_cluster.py  migrate_to_postgres.py  rebuild_index.py  report_long_functions.py  rotate_secrets.py  setup_database.py  setup_fulltext.py  setup_nbs_database.py  setup_nebs_database.py  setup_postgres_rls.sql  setup_tipi_database.py  test_regex.py  test_tipi_filter.py  validate_auth_env.ps1  validate_production_env.py  verify_api.py
snapshots/: baseline_v1.json
tests/: __init__.py  conftest.py  shared_fixtures.py
(+586 files in other folders)
