[project]
name = "fiscal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=23.1.0",
    "aiosqlite>=0.19.0",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "fastapi>=0.109.0",
    "google-generativeai>=0.3.2",
    "openpyxl>=3.1.5",
    "orjson>=3.9",
    "pydantic-settings>=2.1.0",
    "pyjwt[crypto]>=2.12.0",
    "pymupdf>=1.27.2",
    "python-dotenv>=1.0.0",
    "redis[hiredis]>=5.0",
    "sqlalchemy[asyncio]>=2.0",
    "sqlmodel>=0.0.14",
    "uvicorn>=0.27.0",
    "cryptography>=44.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pyright>=1.1",
    "pylint>=3.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "pytest-benchmark>=4.0",
    "pytest-cov>=5.0",
    "requests>=2.32",
    "ruff>=0.11",
    "black>=24.10.0",
    "mypy>=1.19.1,<1.20.0",
]

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "standard"
venvPath = "."
venv = ".venv"
include = ["backend", "tests", "migrations", "scripts"]
exclude = [
    "client",
    "node_modules",
    "megalinter-reports",
    ".git",
    ".venv",
    ".pytest_cache",
    ".ruff_cache",
]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
exclude = "(^client/|^node_modules/|^megalinter-reports/)"
